--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,4 +1,7 @@
-
+html{
+	position: relative;
+	min-height: 100%;
+}
 
 
 .portfolio-item {
@@ -18,7 +21,7 @@
 footer{
   position: absolute;
   width: 100%; 
-  bottom: 0; left: 0; right: 0;
+  bottom: 0;
 }
 
 .form-signin {
