--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,4 +1,7 @@
-
+html {
+	position: relative;
+	min-height: 100%
+}
 
 
 .portfolio-item {
@@ -19,6 +22,7 @@ footer{
   position: absolute;
   width: 100%; 
   bottom: 0; left: 0; right: 0;
+  background-color: #89c4ff !important;
 }
 
 .form-signin {
@@ -53,14 +57,64 @@ footer{
     text-align: justify;
 }
 
+
 #slide1 {
-   background: url(resources/jquery-ui/images/radio.jpg) center 0 no-repeat fixed;
+   background: url(https://backgroundcheckall.com/wp-content/uploads/2017/12/background-image-bootstrap-5.jpg) center 0 no-repeat fixed;
 }
 
 #slide2 {
-   background: url(slide2-bg.jpg) center 0 no-repeat fixed;
+	background-color: #fff !important;
 }
 
 #slide3 {
-   background: url(slide3-bg.jpg) center 0 no-repeat fixed;
+   background: url(https://s3.eu-west-3.amazonaws.com/mp3webradio-benjixxx/banniere.jpg-10) center 0 no-repeat fixed;
 }
+
+
+figure {
+  display: block;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 0 20px 20px 0;
+}
+figcaption {
+  position: absolute;
+  background: black;
+  background: rgba(0,0,0,0.75);
+  color: white;
+  padding: 10px 20px;
+  opacity: 0;
+  -webkit-transition: all 0.6s ease;
+  -moz-transition:    all 0.6s ease;
+  -o-transition:      all 0.6s ease;
+}
+figure:hover figcaption {
+  opacity: 1;
+}
+figure:before {
+  position: absolute;
+  font-weight: 800;
+  background: black;
+  background: rgba(255,255,255,0.75);
+  text-shadow: 0 0 5px white;
+  color: #ffffff;
+  width: 24px;
+  height: 24px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius:    12px;
+  border-radius:         12px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 24px;
+  -moz-transition: all 0.6s ease;
+  opacity: 0.75;
+}
+figure:hover:before {
+  opacity: 0;
+}
+
+
+.cap-bot:before { bottom: 10px; left: 10px; }
+.cap-bot figcaption { left: 0; bottom: -30%;width: 100%;}
+.cap-bot:hover figcaption { bottom: 0; }
